overhaul and data fix

--- a/sidebar-showcase.html
+++ b/sidebar-showcase.html
@@ -176,7 +176,7 @@
       <section class="demo-section" data-section-id="quickstart">
         <div class="section-header">
           <i class="fa-solid fa-star"></i>
-          <span>I. Quick Start Guide</span>
+          <span>Quick Start Guide</span>
           <span class="section-count">0/8</span>
         </div>
         
@@ -216,7 +216,7 @@
       <section class="demo-section" data-section-id="treasures">
         <div class="section-header">
           <i class="fa-solid fa-gem"></i>
-          <span>II. Treasure Hunts</span>
+          <span>Treasure Hunts</span>
           <span class="section-count">0/26</span>
         </div>
         
